<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>franka_gazebo</name>
  <version>0.0.0</version>
  <description>Package to simulate the Franka robot in Gazebo</description>
  <maintainer email="59539017+matgat1@users.noreply.github.com">mga</maintainer>
  <license>TODO: License declaration</license>

  <depend>gazebo_ros</depend>
  <depend>gazebo_ros2_control</depend>
  <depend>franka_description</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
